// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewAllIssuesLink /> snapshot default 1`] = `
<ViewAllIssuesLink
  advancedSearchSelected={[MockFunction]}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isLoading={false}
  onClick={[MockFunction]}
  query=""
  searchSessionId="testSessionId"
>
  <span
    data-test-id="jira-view-all-issues"
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <AdvancedSearchLink
      href="/secure/QuickSearch.jspa?searchString="
      isKeyboardHighlighted={false}
      onClick={[Function]}
    >
      div
    </AdvancedSearchLink>
  </span>
</ViewAllIssuesLink>
`;

exports[`<ViewAllIssuesLink /> snapshot keyboard highlighted 1`] = `
<ViewAllIssuesLink
  advancedSearchSelected={[MockFunction]}
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isLoading={false}
  onClick={[MockFunction]}
  query=""
  searchSessionId="testSessionId"
>
  <span
    data-test-id="jira-view-all-issues"
    style={
      Object {
        "display": "flex",
        "width": "100%",
      }
    }
  >
    <AdvancedSearchLink
      href="/secure/QuickSearch.jspa?searchString="
      isKeyboardHighlighted={true}
      onClick={[Function]}
    >
      div
    </AdvancedSearchLink>
  </span>
</ViewAllIssuesLink>
`;
